# cython_catkin_example

./: CMakeLists.txt  README.rst  package.xml  setup.py
script/: example.py
src/cython_catkin_example/: CMakeLists.txt  setup.py
src/cython_catkin_example/include/: cython_catkin_example.h
src/cython_catkin_example/src/: CMakeLists.txt  cython_catkin_example.cpp  cython_catkin_example.pyx
